sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:12: error: not found: value Blanc
    } else if (getCouleur(apresBleu) == Blanc){
                                        ^